--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ h3 {
     font-size: 24px;
     letter-spacing: 6px;
     font-weight: bold;
+    color: black;
     text-transform: uppercase;
 }
 
